feat(back): update clock and user relation
